fix minimum scrollbar thumb size

--- a/editor/styling/stylesheets/components/_scroll-bar.scss
+++ b/editor/styling/stylesheets/components/_scroll-bar.scss
@@ -1,26 +1,17 @@
 .scroll-bar {
     -fx-background-color: -df-background-light;
     &:horizontal {
-        -fx-background-insets: 0px -1px -1px -1px;
-        //-fx-padding: 2px -1px -1px -1px;
-        >.thumb {
-            -fx-background-insets: 1px 5px 1px 5px;
-            -fx-padding: 0 20px 0 10px !important;
-        }
         .increment-button, .decrement-button {
             -fx-padding: 0 0 10 0;
         }
     }
     &:vertical {
-        >.thumb {
-            //-fx-background-insets: 5px 3px 5px 2px;
-            -fx-background-insets: 5px 1px 5px 1px;
-        }
         .increment-button, .decrement-button {
             -fx-padding: 0 10 0 0;
         }
     }
     .thumb {
+        -fx-background-insets: 1px;
         -fx-background-color: -df-component-dark;
         -fx-background-radius: 2em;
         &:hover {
